--- a/deploy/maintenance-site/index.html
+++ b/deploy/maintenance-site/index.html
@@ -235,7 +235,7 @@
   </footer>
 
 
-  <script type="text/javascript" src="https://app.posthog.com/static/toolbar.js?_ts=1674185430000"></script><script type="text/javascript">
+  <script type="text/javascript">
 
     const IFRAME_COUNT = 5;
     let loaded = [];
