--- a/deploy/maintenance-site/index.html
+++ b/deploy/maintenance-site/index.html
@@ -24,7 +24,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <link rel="stylesheet" href="/static/home/css/index.css">
-    
+
     <style>
       .material-icons {
         opacity: 0;
@@ -106,11 +106,11 @@
 
         <div class="col">
           <p class="text-center">
-            <a class="ga-btn" data-nostrip="true" href="https://usegalaxy.org.au/tiaas" target="_blank">
+            <a class="ga-btn" href="https://usegalaxy.org.au/tiaas" target="_blank">
               Learn more
             </a>
             <br>
-            <a class="ga-btn" data-nostrip="true" href="https://usegalaxy.org.au/tiaas/new" target="_blank">
+            <a class="ga-btn" href="https://usegalaxy.org.au/tiaas/new" target="_blank">
               Enquire now
             </a>
           </p>
