--- a/deploy/maintenance-site/index.html
+++ b/deploy/maintenance-site/index.html
@@ -6,24 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex, nofollow">
 
-    <link rel="icon" href="/static/favicon/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/static/favicon/site.webmanifest">
+    <link rel="icon" href="./static/favicon/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="./static/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./static/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./static/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./static/favicon/site.webmanifest">
 
     <title> Galaxy Australia Media </title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
-    <link rel="stylesheet" href="/static/vendor/fontawesome-5.15.4/css/all.css">
-    <link rel="stylesheet" href="/static/vendor/material-icons.css">
-    <link rel="stylesheet" href="/static/home/css/main.css">
+    <link rel="stylesheet" href="./static/vendor/fontawesome-5.15.4/css/all.css">
+    <link rel="stylesheet" href="./static/vendor/material-icons.css">
+    <link rel="stylesheet" href="./static/home/css/main.css">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <link rel="stylesheet" href="/static/home/css/index.css">
+    <link rel="stylesheet" href="./static/home/css/index.css">
 
     <style>
       .material-icons {
@@ -40,7 +40,7 @@
   <main>
     <section class="container-flex text-center my-3">
       <a href="https://usegalaxy.org.au">
-        <img id="header-logo" src="/static/home/img/ga-logo.png" alt="Galaxy Australia Logo">
+        <img id="header-logo" src="./static/home/img/ga-logo.png" alt="Galaxy Australia Logo">
       </a>
     </section>
 
@@ -70,7 +70,7 @@
       </div>
 
       <div class="row justify-content-between counters">
-        <img class="loading" src="/static/home/img/spinner.svg" alt="Loading stats" style="display: none;">
+        <img class="loading" src="./static/home/img/spinner.svg" alt="Loading stats" style="display: none;">
 
         <div class="col">
           <iframe src="https://stats.usegalaxy.org.au/d-solo/-D4mtTAik/for_embedding?orgId=1&amp;refresh=1d&amp;panelId=19" frameborder="0" onload="notifyLoaded(2);" style="opacity: 1;"></iframe>
@@ -139,53 +139,53 @@
     <div class="container logo">
       <div class="text-center">
         <a href="https://www.biocommons.org.au" target="_blank">
-          <img src="/static/logos/footer/au-biocommons.png">
+          <img src="./static/logos/footer/au-biocommons.png">
         </a>
 
         <a href="https://www.qcif.edu.au" target="_blank">
-          <img src="/static/logos/footer/qcif.png">
+          <img src="./static/logos/footer/qcif.png">
         </a>
 
         <a href="https://www.melbournebioinformatics.org.au" target="_blank">
-          <img src="/static/logos/footer/melb-bio-short.png">
+          <img src="./static/logos/footer/melb-bio-short.png">
         </a>
 
         <a href="https://www.aarnet.edu.au" target="_blank">
-          <img src="/static/logos/footer/aarnet.png">
+          <img src="./static/logos/footer/aarnet.png">
         </a>
       </div>
 
       <div class="text-center second">
         <a href="https://www.uq.edu.au" target="_blank">
-          <img src="/static/logos/footer/uq-grayscale.png">
+          <img src="./static/logos/footer/uq-grayscale.png">
         </a>
 
         <a href="https://ardc.edu.au" target="_blank">
-          <img src="/static/logos/footer/ardc-grayscale.png">
+          <img src="./static/logos/footer/ardc-grayscale.png">
         </a>
 
         <a href="https://www.unimelb.edu.au" target="_blank">
-          <img src="/static/logos/footer/uni-melbourne.png">
+          <img src="./static/logos/footer/uni-melbourne.png">
         </a>
 
         <a href="https://bioplatforms.com" target="_blank">
-          <img src="/static/logos/footer/bpa-grayscale.png">
+          <img src="./static/logos/footer/bpa-grayscale.png">
         </a>
 
         <a href="https://nci.org.au" target="_blank">
-          <img src="/static/logos/footer/nci-grayscale.png">
+          <img src="./static/logos/footer/nci-grayscale.png">
         </a>
 
         <a href="https://pawsey.org.au" target="_blank">
-          <img src="/static/logos/footer/pawsey-grayscale.png">
+          <img src="./static/logos/footer/pawsey-grayscale.png">
         </a>
 
         <a href="https://www.dese.gov.au/ncris" target="_blank">
-          <img src="/static/logos/footer/ncris-grayscale.png">
+          <img src="./static/logos/footer/ncris-grayscale.png">
         </a>
 
         <a href="https://www.qld.gov.au" target="_blank">
-          <img src="/static/logos/footer/qld-gov.png">
+          <img src="./static/logos/footer/qld-gov.png">
         </a>
       </div>
     </div>
@@ -196,7 +196,7 @@
       <div class="row" id="footer-links-row">
         <div class="col" id="footer-galaxy-logo">
           <a href="/">
-            <img src="/static/logos/footer/galaxy-black.svg" alt="Galaxy logo black">
+            <img src="./static/logos/footer/galaxy-black.svg" alt="Galaxy logo black">
           </a>
         </div>
 
