Update exported content

--- a/webapp/home/test/data/subsite/media/subsite_intro.html
+++ b/webapp/home/test/data/subsite/media/subsite_intro.html
@@ -1,15 +1,11 @@
 <section class="my-5" id="tagline">
   <p class="lead">
-    This is a custom intro that was provided by the YAML template context!
+    This custom introductory text was pulled down from GitHub and rendered in real time!
+    Updates to this text on GitHub (see <code>subsite_intro.html</code>) will be reflected on
+    this page.
   </p>
+
   <p>
     Welcome to the Galaxy Anarctica Archaeology Lab! Get quick access to tools, workflows and tutorials for all things tombs and fossils.
-    <br>
-    <a
-      href="#"
-      data-bs-toggle="modal"
-      data-bs-target="#infoModal">
-      What is this page?
-    </a>
   </p>
 </section>
