--- a/deploy/maintenance-site/index.html
+++ b/deploy/maintenance-site/index.html
@@ -177,7 +177,7 @@
           </a>
         </div>
 
-        <div class="col-md-auto">
+        <!-- <div class="col-md-auto">
           <h6>SITE LINKS</h6>
           <div class="row plain-links" id="footer-site-links">
             <div class="col-md-6">
@@ -198,7 +198,7 @@
               </small>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-md-auto" style="max-width: 450px;">
           <h6>ACKNOWLEDGEMENTS</h6>
