Update acknowledge links to new page

--- a/deploy/maintenance-site/index.html
+++ b/deploy/maintenance-site/index.html
@@ -171,20 +171,19 @@
         <div class="col-md-auto" id="footer-galaxy-logo">
           <a href="/">
             <img
-              src="/static/favicon/android-chrome-192x192.png"
+              src="/static/favicon/android-chrome-192x192.png' %}"
               alt="Galaxy logo"
             >
           </a>
         </div>
 
-        <!-- <div class="col-md-auto">
-          <h6>SITE LINKS</h6>
+        <div class="col-md-auto">
           <div class="row plain-links" id="footer-site-links">
             <div class="col-md-6">
               <small>
                 <a href="/request">Support</a> <br>
                 <a href="/about">About</a><br>
-                <a href="/about#acknowledgement-statement">Acknowledging Galaxy Australia</a> <br>
+                <a href="/acknowledge">Acknowledging Galaxy Australia</a> <br>
                 <a href="/about#feature-catalogue">Feature catalogue</a>
               </small>
             </div>
@@ -198,10 +197,9 @@
               </small>
             </div>
           </div>
-        </div> -->
+        </div>
 
         <div class="col-md-auto" style="max-width: 450px;">
-          <h6>ACKNOWLEDGEMENTS</h6>
           <small>
             <p class="tight mb-2">
               This service forms part of the national Australian BioCommons infrastructure.
@@ -217,7 +215,6 @@
         </div>
 
         <div class="col-md-auto">
-          <h6>CONNECT</h6>
           <p class="plain-links">
             <a href="mailto:help@genome.edu.au">
               <i class="fas fa-envelope"></i>
