--- a/deploy/maintenance-site/index.html
+++ b/deploy/maintenance-site/index.html
@@ -171,7 +171,7 @@
         <div class="col-md-auto" id="footer-galaxy-logo">
           <a href="/">
             <img
-              src="/static/favicon/android-chrome-192x192.png' %}"
+              src="/static/favicon/android-chrome-192x192.png"
               alt="Galaxy logo"
             >
           </a>
